fix parziale test di sistema

--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiSistema/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiSistema/main.tex
@@ -11,8 +11,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Esito}} \\
 
         TS1&
-        L'amministratore deve poter essere in grado di registrare nuovi utenti.\newline
-        All'amministratore viene chiesto di:
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di registrare nuovi utenti.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
+        
         \begin{itemize}
             \item poter accedere alla pagina di registrazione;
             \item selezionare il tipo di utente scelto;
@@ -22,47 +25,46 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
       TS1.1&
-        L'amministratore deve poter essere in grado di registrare altri Amministratori.\newline
-        All'amministratore viene chiesto di:
+      \begin{flushleft}
+            L'amministratore deve poter essere in grado di registrare altri amministratori.
+            All'amministratore viene chiesto di:
+      \end{flushleft}
         \begin{itemize}
-            \item accedere alla pagina di registrazione e specificare il tipo di utente come Amministratore;
-            \item inserire il nome del nuovo utente;
-            \item inserire il cognome del nuovo utente;
-            \item inserire l'indirizzo e-mail del nuovo utente;
-            \item inserire una password temporanea.
+            \item accedere alla pagina di registrazione e specificare il tipo di utente come amministratore;
+            \item inserire l'indirizzo e-mail del nuovo utente.
             
         \end{itemize}&
         NI\\
 
         TS1.2&
-        L'amministratore deve poter essere in grado di registrare utenti come dipendenti.\newline
-        All'amministratore viene chiesto di:
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di registrare utenti come dipendenti.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
-            \item accedere alla pagina di registrazione e specificare il tipo di utente come Dipendente;
-            \item inserire il nome del nuovo utente;
-            \item inserire il cognome del nuovo utente;
-            \item inserire l'indirizzo e-mail del nuovo utente;
-            \item inserire una password temporanea.
+            \item accedere alla pagina di registrazione e specificare il tipo di utente come dipendente;
+            \item inserire l'indirizzo e-mail del nuovo utente.
             
         \end{itemize}&
         NI\\
 
         TS1.3&
-        L'amministratore deve poter essere in grado di registrare utenti come Igienizzatori.\newline
-        All'amministratore viene chiesto di:
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di registrare utenti come igienizzatori.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
-            \item accedere alla pagina di registrazione e specificare il tipo di utente come Igienizzatore;
-            \item inserire il nome del nuovo utente;
-            \item inserire il cognome del nuovo utente;
-            \item inserire l'indirizzo e-mail del nuovo utente;
-            \item inserire una password temporanea.
+            \item accedere alla pagina di registrazione e specificare il tipo di utente come igienizzatore;
+            \item inserire l'indirizzo e-mail del nuovo utente.
             
         \end{itemize}&
         NI\\
 
-        TS2.0&
-        Il dipendente deve essere in grado di accedere all'applicazione.\newline
-        Al dipendente viene chiesto di:
+        TS2&
+        \begin{flushleft}
+             Il dipendente deve essere in grado di accedere all'applicazione mobile e autenticarsi con le proprie credenziali.
+             Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina di Login;
             \item inserire l'indirizzo e-mail;
@@ -70,9 +72,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS3.0&
-        Il dipendente deve essere in grado di scannarizzare il tag RFID.\newline
-        Al dipendente viene chiesto di:
+        TS3&
+        \begin{flushleft}
+            Il dipendente deve essere in grado di scannarizzare il tag RFID.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina dedicata;
             \item selezionare la scannerizzazione;
@@ -84,8 +88,10 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
         TS3.1&
-        Il dipendente deve essere verificare lo stato di una postazione tramite la scannarizzazione del tag RFID.\newline
-        Al dipendente viene chiesto di:
+        \begin{flushleft}
+            Il dipendente deve essere verificare lo stato di una postazione tramite la scannarizzazione del tag RFID.\newline
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina dedicata;
             \item selezionare la scannerizzazione;
@@ -98,9 +104,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
 
-        TS4.0&
-        Il dipendente deve poter essere in grado di creare una prenotazione.\newline
-        Al dipendente viene chiesto di:
+        TS4&
+        \begin{flushleft}
+            Il dipendente deve poter essere in grado di creare una prenotazione.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di creazione di una prenotazione;
             \item verificare che sia possibile creare una prenotazione specificando data e ora;
@@ -112,8 +120,10 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
         TS4.1&
-        Il dipendente deve essere in grado di modificare una prenotazione.\newline
-        Al dipendente viene chiesto di:
+        \begin{flushleft}
+            Il dipendente deve essere in grado di modificare una prenotazione.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di modifica di una prenotazione;
             \item verificare che sia possibile modificare una prenotazione specificando una nuova data e ora;
@@ -123,29 +133,35 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
             \item verificare che la prenotazione venga rifiutata per un errore specificato.
         \end{itemize}&
         NI\\
+
         TS4.2&
-        Il dipendente deve essere in grado di eliminare una prenotazione.\newline
-        Al dipendente viene chiesto di:
+        \begin{flushleft}
+            Il dipendente deve essere in grado di eliminare una prenotazione.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di cancellazione di una prenotazione;
             \item verificare che sia possibile eliminare una prenotazione effettuata in precedenza per una specifica data e ora;
             \item verificare che la prenotazione venga eliminata.
         \end{itemize}&
         NI\\
+
         TS4.3&
-        Il dipendente deve poter in grado di visualizzare le prenotazioni attive nel sistema.\newline
-        Al dipendente viene chiesto di:
+        \begin{flushleft}
+            Il dipendente deve poter in grado di visualizzare le prenotazioni da lui effettuate.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di visualizzazione delle prenotazioni;
-            \item verificare che siano elencate correttamente tutte le sue prenotazioni attive.
-            \item [] OPPURE
-            \item verificare che sia visualizzato un messaggio di errore indicando che non esistono prenotazioni attive.
+            \item verificare che siano elencate correttamente tutte le sue prenotazioni.
         \end{itemize}&
         NI\\
 
         TS4.4&
-        Il dipendente deve poter in grado di visualizzare le prenotazioni attive nel sistema.\newline
-        Al dipendente viene chiesto di:
+        \begin{flushleft}
+            Il dipendente deve poter in grado di visualizzare le prenotazioni attive nel sistema.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di visualizzazione delle prenotazioni;
             \item verificare che siano elencate correttamente tutte le sue prenotazioni attive.
@@ -155,8 +171,10 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
         TS4.5&
-        Il dipendente deve non essere in grado di prenotare una postazione già prenotata.\newline
-        Al dipendente viene chiesto di:
+        \begin{flushleft}
+            Il dipendente non deve essere in grado di prenotare una postazione già prenotata.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di creazione di una prenotazione;
             \item verificare che sia possibile creare una prenotazione specificando data e ora;
@@ -166,17 +184,21 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
         TS4.6&
-        Il dipendente deve poter essere in grado di vedere e gestire lo stato di tutte le postazioni a cui ha accesso.\newline
-        Al dipendente viene chiesto di:
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di vedere e gestire lo stato di tutte le postazioni.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di gestione delle postazioni;
-            \item verificare che possa gestire le postazioni a cui ha accesso.
+            \item verificare che possa gestire le postazioni a cui ha accesso e verificarne lo stato.
         \end{itemize}&
         NI\\
 
-        TS5.0&
-        L'amministratore deve essere in grado di accedere all'applicazione web.\newline
-        All'amministratore viene chiesto di:
+        TS5&
+        \begin{flushleft}
+            L'amministratore deve essere in grado di accedere all'applicazione web.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina di Login;
             \item inserire l'indirizzo e-mail;
@@ -184,9 +206,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS6.0&
-        L'amministratore deve poter essere in grado di creare nuove postazioni.\newline
-        All'amministratore viene chiesto di:
+        TS6&
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di creare nuove postazioni.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione e selezionare il tipo di postazione;
             \item inserire i dati richiesti;
@@ -195,8 +219,10 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
         TS6.1&
-        L'amministratore deve poter essere in grado di creare nuove stanze.\newline
-        All'amministratore viene chiesto di:
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di creare nuove stanze.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione e selezionare il tipo di postazione come stanza;
             \item inserire il codice della stanza;
@@ -206,21 +232,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS6.2&
-        L'amministratore deve poter essere in grado di creare nuove postazioni all'interno delle stanze.\newline
-        All'amministratore viene chiesto di:
-        \begin{itemize}
-            \item navigare all'apposita sezione e selezionare la stanza dove è rischiesta la creazione della postazione;
-            \item inserire il codice della postazione;
-            \item verificare che non ci siano messaggi di errore;
-            \item confermare la creazione della postazione;
-            \item verificare l'avvenuta creazione della postazione.
-        \end{itemize}&
-        NI\\
-
-        TS7.0&
-        L'amministratore deve poter essere in grado di modificare le postazioni.\newline
-        All'amministratore viene chiesto di:
+        TS7&
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di modificare le postazioni.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione e selezionare il tipo di postazione;
             \item inserire i dati richiesti;
@@ -229,8 +245,10 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
         TS7.1&
-        L'amministratore deve poter essere in grado di modificare le stanze.\newline
-        All'amministratore viene chiesto di:
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di modificare le stanze.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione e selezionare la stanza da modificare;
             \item premere il pulsante modifica;
@@ -241,22 +259,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS7.2&
-        L'amministratore deve poter essere in grado di modificare le postazioni all'interno delle stanze.\newline
-        All'amministratore viene chiesto di:
-        \begin{itemize}
-            \item navigare all'apposita sezione e selezionare la stanza dove è presente la postazione da modificare;
-            \item premere il pulsante modifica;
-            \item inserire i nuovi dati;
-            \item verificare che non ci siano messaggi di errore per la modifica;
-            \item confermare la modifica della postazione;
-            \item verificare l'avvenuta modifica della postazione.
-        \end{itemize}&
-        NI\\
-
-        TS8.0&
-        L'amministratore deve poter essere in grado di eliminare le postazioni.\newline
-        All'amministratore viene chiesto di:
+        TS8&
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di eliminare le postazioni.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione e selezionare il tipo di postazione;
             \item eliminare la postazione;
@@ -266,8 +273,10 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         NI\\
 
         TS8.1&
-        L'amministratore deve poter essere in grado di eliminare le stanze.\newline
-        All'amministratore viene chiesto di:
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di eliminare le stanze.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione e selezionare la stanza da eliminare;
             \item premere il pulsante elimina;
@@ -277,95 +286,41 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS8.2&
-        L'amministratore deve poter essere in grado di eliminare le postazioni all'interno delle stanze.\newline
-        All'amministratore viene chiesto di:
-        \begin{itemize}
-            \item navigare all'apposita sezione e selezionare la stanza dove è presente la postazione da eliminare;
-            \item premere il pulsante elimina;
-            \item verificare che non ci siano messaggi di errore per la modifica;
-            \item confermare l'eliminazione della postazione;
-            \item verificare l'avvenuta eliminazione della postazione.
-        \end{itemize}&
-        NI\\
-
-        TS9.0&
-        L'amministratore deve poter essere in grado di disabilitare le postazioni.\newline
-        All'amministratore viene chiesto di:
+        TS9&
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di disabilitare le postazioni.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione e selezionare il tipo di postazione;
             \item disabilitare la postazione;
             \item confermare la disabilitazione della postazione;
-            \item verificare l'avvenuta disabilitazione della postazione.
+            \item verificare l'avvenuta disabilitazione della postazione;
+            \item verificare che la postazione non sia prenotabile.
         \end{itemize}&
         NI\\
 
         TS9.1&
-        L'amministratore deve poter essere in grado di disabilitare le stanze.\newline
-        All'amministratore viene chiesto di:
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di disabilitare le stanze.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione e selezionare la stanza da disabilitare;
             \item premere il pulsante disabilitare;
             \item verificare che non ci siano messaggi di errore per la modifica;
             \item confermare la disabilitazione della stanza;
-            \item verificare l'avvenuta disabilitazione della stanza.
+            \item verificare l'avvenuta disabilitazione della stanza;
+            \item verificare che le postazioni interne alla stanza non siano prenotabili.
         \end{itemize}&
         NI\\
 
-        TS9.2&
-        L'amministratore deve poter essere in grado di disabilitare le postazioni all'interno delle stanze.\newline
-        All'amministratore viene chiesto di:
-        \begin{itemize}
-            \item navigare all'apposita sezione e selezionare la stanza dove è presente la postazione da disabilitare;
-            \item premere il pulsante disabilitare;
-            \item verificare che non ci siano messaggi di errore per la modifica;
-            \item confermare la disabilitazione della postazione;
-            \item verificare l'avvenuta disabilitazione della postazione.
-        \end{itemize}&
-        NI\\
 
-        TS10.0&
-        L'amministratore deve poter essere in grado di impedire le prenotazioni.\newline
-        All'amministratore viene chiesto di:
-        \begin{itemize}
-            \item navigare all'apposita sezione di blocco delle prenotazioni;
-            \item bloccare la possibilità di prenotare;
-            \item verificare che la postazione non permetta la prenotazione.
-        \end{itemize}&
-        NI\\
-
-        TS10.1&
-        L'amministratore deve poter essere in grado di impedire prenotazioni di una stanza.\newline
-        All'amministratore viene chiesto di:
-        \begin{itemize}
-            \item navigare all'apposita sezione di blocco delle prenotazioni della stanza;
-            \item bloccare la possibilità di prenotare in quella determinata stanza;
-            \item verificare che la stanza non permetta le prenotazione.
-        \end{itemize}&
-        NI\\
-
-        TS11&
-        L'amministratore deve poter essere in grado di impedire prenotazioni di una singola postazione.\newline
-        All'amministratore viene chiesto di:
-        \begin{itemize}
-            \item navigare all'apposita sezione di blocco delle prenotazioni della postazione;
-            \item bloccare la possibilità di prenotare quella postazione;
-            \item verificare che la postazione non permetta le prenotazione.
-        \end{itemize}&
-        NI\\
-
-        TS12&
-        L'amministratore deve poter essere in grado di vedere e gestire lo stato di tutte le postazioni a cui ha accesso.\newline
-        All'amministratore viene chiesto di:
-        \begin{itemize}
-            \item navigare all'apposita sezione di gestione delle postazioni;
-            \item verificare che possa gestire le postazioni a cui ha accesso.
-        \end{itemize}&
-        NI\\
-
-        TS13&
-        L'amministratore deve poter essere in grado di riabilitare una postazione precedentemente disabilitata.\newline
-        All'amministratore viene chiesto di:
+        TS10&
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di riabilitare una postazione precedentemente disabilitata.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di gestione delle postazioni;
             \item marcare la postazione disabilitata desiderata come abilitata;
@@ -373,10 +328,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS14&
-        L'amministratore deve poter essere in grado di monitorare in ogni momento il numero di dipendenti presenti in tutte le postazioni e nella
-        stanza nel suo complesso.\newline
-        All'amministratore viene chiesto di:
+        TS11&
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di monitorare in ogni momento il numero di dipendenti presenti in tutte le postazioni e nella stanza nel suo complesso.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di gestione delle postazioni;
             \item selezionare il monitoraggio in tempo reale;
@@ -384,9 +340,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS15&
-        L'amministratore deve poter essere in grado di effettuare ricerche sugli accessi e sulle postazioni occupate da uno specifico dipendente.\newline
-        All'amministratore viene chiesto di:
+        TS12&
+        \begin{flushleft}
+            L'amministratore deve poter essere in grado di effettuare ricerche sugli accessi e sulle postazioni occupate da uno specifico dipendente.
+            All'amministratore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare all'apposita sezione di gestione degli utenti;
             \item aprire la barra di ricerca;
@@ -395,9 +353,11 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS16&
-        L'igienizzatore deve essere in grado di accedere all'applicazione mobile.\newline
-        All'igienizzatore viene chiesto di:
+        TS13&
+        \begin{flushleft}
+            L'igienizzatore deve essere in grado di accedere all'applicazione mobile.
+            All'igienizzatore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina di Login;
             \item inserire l'indirizzo e-mail;
@@ -405,82 +365,87 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
 
-        TS17&
-        L'igienizzatore deve essere in grado di visualizzare le stanze dove c'è stato almeno un dipendente.\newline
-        All'igienizzatore viene chiesto di:
+        TS14&
+        \begin{flushleft}
+            L'igienizzatore deve essere in grado di visualizzare le stanze da pulire.
+            All'igienizzatore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare nell'apposita sezione;
             \item visualizzare lo stato delle stanze;
         \end{itemize}&
         NI\\
 
-        TS18&
-        L'igienizzatore deve essere in grado di marcare le stanze dove ha effettuato l'igienizzazione.\newline
-        All'igienizzatore viene chiesto di:
+        TS15&
+        \begin{flushleft}
+            L'igienizzatore deve essere in grado di marcare le stanze dove ha effettuato l'igienizzazione.
+            All'igienizzatore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare nell'apposita sezione;
             \item selezionare la stanza igienizzata;
             \item confermare l'igienizzazione della stanza;
-            \item verificare l'avvenuta marcazione della stanza.
+            \item verificare l'avvenuta marcatura della stanza come igienizzata;
+            \item verificare che tutte le postazioni interne alla stanza risultino igienizzate.
         \end{itemize}&
         NI\\
 
-        TS18.1&
-        L'igienizzatore deve essere in grado marcare la stanza come igienizzata tramite la scannarizzare del tag RFID.\newline
-        All'igienizzatore viene chiesto di:
+        TS15.1&
+        \begin{flushleft}
+            L'igienizzatore deve essere in grado marcare la stanza come igienizzata tramite la scannarizzare del tag RFID.
+            All'igienizzatore viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina dedicata;
             \item selezionare la scannerizzazione;
             \item appoggiare il telefono al tag RFID;
             \item verificare la corretta scannerizzazione del tag RFID;
-            \item [] oppure
-            \item visualizzazione dell'errore della scannerizzazione non avvenuta correttamente;
             \item confermare l'igienizzazione della stanza;
             \item verificare l'avvenuta conferma dell'igienizzazione della stanza.
         \end{itemize}&
         NI\\
 
-        TS19&
-        Il dipendente deve essere in grado di marcare la postazione dove ha utilizzato il kit pulizia come l'igienizzato.\newline
-        Al dipendente viene chiesto di:
+        TS16&
+        \begin{flushleft}
+            Il dipendente deve essere in grado di marcare la postazione come igienizzata in seguito all'utilizzo dell'apposito kit di pulizia.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item navigare nell'apposita sezione;
             \item selezionare la stanza;
             \item selezionare la postazione;
             \item confermare l'igienizzazione della postazione;
-            \item verificare l'avvenuta marcazione della postazione.
+            \item verificare l'avvenuta marcatura della postazione come igienizzata.
         \end{itemize}&
         NI\\
 
-        TS19.1&
-        Il dipendente deve essere in grado di marcare la postazione dove ha utilizzato il kit pulizia come l'igienizzato tramite tag RFID.\newline
-        Al dipendente viene chiesto di:
+        TS16.1&
+        \begin{flushleft}
+            Il dipendente deve essere in grado di marcare la postazione dove ha utilizzato il kit pulizia come igienizzata tramite tag RFID.
+            Al dipendente viene chiesto di:
+        \end{flushleft}
         \begin{itemize}
             \item accedere alla pagina dedicata;
             \item selezionare la scannerizzazione;
             \item appoggiare il telefono al tag RFID;
             \item verificare la corretta scannerizzazione del tag RFID;
-            \item [] oppure
-            \item visualizzazione dell'errore della scannerizzazione non avvenuta correttamente;
             \item confermare l'igienizzazione della postazione;
             \item verificare l'avvenuta conferma dell'igienizzazione della postazione.
         \end{itemize}&
         NI\\
 
-        TS20&
-        Il sistema deve marcare come sporca una postazione che \`{e} stata occupata.\newline
-        Quando viene occupata una postazione il sistema deve:
+        TS17&
+        \begin{flushleft}
+            Il sistema deve marcare come sporca una postazione che \`{e} stata occupata.
+            Quando viene occupata una postazione il sistema deve:
+        \end{flushleft}
         \begin{itemize}
             \item marcare la postazione come "sporca";
-            \item rendere la postazione non prenotabile fin quando non risulter\`{a} "pulita".
+            \item rendere la postazione prenotabile ma da pulire.
         \end{itemize}&
         NI\\
-        TS21&
-        Il sistema deve essere in grado di marcare come "libera" una postazione igienizzata.\newline
-        \begin{itemize}
-            \item La postazione \`{e} prenotabile.
-        \end{itemize}&
-        NI\\
+
+     
         
     \end{longtable}
 }
